@@ -1,9 +1,10 @@
 package org.crue.hercules.sgi.csp.service;
 
 import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 import org.crue.hercules.sgi.csp.config.SgiConfigProperties;
 import org.crue.hercules.sgi.csp.dto.com.CspComCambioEstadoRechazadaSolTipoRrhhData;
@@ -15,12 +16,14 @@ import org.crue.hercules.sgi.csp.dto.sgp.PersonaOutput;
 import org.crue.hercules.sgi.csp.dto.sgp.PersonaOutput.Email;
 import org.crue.hercules.sgi.csp.exceptions.SolicitudRrhhNotFoundException;
 import org.crue.hercules.sgi.csp.model.Convocatoria;
+import org.crue.hercules.sgi.csp.model.ConvocatoriaTitulo;
 import org.crue.hercules.sgi.csp.model.Solicitud;
 import org.crue.hercules.sgi.csp.model.SolicitudRrhh;
 import org.crue.hercules.sgi.csp.repository.ConvocatoriaRepository;
 import org.crue.hercules.sgi.csp.repository.SolicitudRrhhRepository;
 import org.crue.hercules.sgi.csp.service.sgi.SgiApiComService;
 import org.crue.hercules.sgi.csp.service.sgi.SgiApiSgpService;
+import org.crue.hercules.sgi.framework.i18n.I18nHelper;
 import org.springframework.stereotype.Service;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -56,7 +59,7 @@ public class SolicitudRrhhComService {
     if (solicitud.getConvocatoriaId() != null) {
       Optional<Convocatoria> convocatoria = this.convocatoriaRepository.findById(solicitud.getConvocatoriaId());
       if (convocatoria.isPresent()) {
-        dataBuilder.tituloConvocatoria(convocatoria.get().getTitulo());
+        dataBuilder.tituloConvocatoria(I18nHelper.getFieldValue(convocatoria.get().getTitulo()));
         dataBuilder.fechaProvisionalConvocatoria(convocatoria.get().getFechaProvisional());
       }
     }
@@ -80,7 +83,7 @@ public class SolicitudRrhhComService {
         .nombreApellidosSolicitante(
             this.solicitanteDataService.getSolicitanteNombreApellidos(solicitud.getId(), solicitud.getSolicitanteRef()))
         .codigoInternoSolicitud(solicitud.getCodigoRegistroInterno())
-        .tituloConvocatoria(this.getTituloConvocatoria(solicitud.getConvocatoriaId()))
+        .tituloConvocatoria(I18nHelper.getFieldValue(this.getTituloConvocatoria(solicitud.getConvocatoriaId())))
         .build();
 
     log.debug(
@@ -102,7 +105,7 @@ public class SolicitudRrhhComService {
         .nombreApellidosSolicitante(
             this.solicitanteDataService.getSolicitanteNombreApellidos(solicitud.getId(), solicitud.getSolicitanteRef()))
         .codigoInternoSolicitud(solicitud.getCodigoRegistroInterno())
-        .tituloConvocatoria(this.getTituloConvocatoria(solicitud.getConvocatoriaId()))
+        .tituloConvocatoria(I18nHelper.getFieldValue(this.getTituloConvocatoria(solicitud.getConvocatoriaId())))
         .build();
 
     log.debug(
@@ -116,14 +119,14 @@ public class SolicitudRrhhComService {
 
   }
 
-  private String getTituloConvocatoria(Long convocatoriaId) {
+  private Set<ConvocatoriaTitulo> getTituloConvocatoria(Long convocatoriaId) {
     if (convocatoriaId != null) {
       Optional<Convocatoria> convocatoria = this.convocatoriaRepository.findById(convocatoriaId);
       if (convocatoria.isPresent()) {
         return convocatoria.get().getTitulo();
       }
     }
-    return null;
+    return Collections.emptySet();
   }
 
   private String getEnlaceAplicacionMenuValidacionTutor() {
@@ -139,7 +142,7 @@ public class SolicitudRrhhComService {
         .map(email -> Recipient
             .builder().name(email.getEmail()).address(email.getEmail())
             .build())
-        .collect(Collectors.toList());
+        .toList();
   }
 
 }
